# android-terminal

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/terminal/: index.html  terminal-codec.js  terminal.css  terminal.js
app/src/main/c/: CMakeLists.txt  session_environment.c  session_environment.h  shell_bridge.c
build-tools/: pyproject.toml
docs/: DESIGN.md  VALIDATION.md  architecture.md  capability-matrix.md  device-smoke-validation.md  device-validation.md  layer2-completion.json  layer3-touch-interactions.md  native-account-session.md  upstream-capabilities.json
tools/: acquire-web-terminal-assets.sh  build-native-bridge-cmake.sh  build-native-bridge.sh  prepare-android-sdk.sh  provision-web-terminal-assets.py  test-asset-provisioner.sh  test-core-host-integration.sh  test-document-policy.sh  test-document-transport.sh  test-font-scale.sh  test-frontend-recovery.sh  test-layer2-completion.sh  test-layer3-scaffold.sh  test-login-shell.sh  test-no-saf-virtual-mount.sh  test-platform-adapter-compile.sh  test-platform-policy.sh  test-renderer-recovery-compile.sh  test-session-directories.sh  test-session-environment.sh  test-session-replay.sh  test-shared-storage-access.sh  test-stable-addon-wave.sh  test-terminal-core.sh  test-terminal-geometry.sh  test-verifier.sh  test-web-terminal.sh  test-webgl-renderer.sh  verify-layer-boundaries.py  verify-layer2-completion.py  verify-native-ndk.sh  verify-no-saf-virtual-mount.sh  verify-repository.sh  verify-upstream-capabilities.py  verify-web-assets.py  verify_policy.py
(+47 files in other folders)
